Front-end-pages/css/landing-style.css
@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');

* {
    margin: 0;
    padding: 0;
}

body {
    background: #6F2232;
    font-family: Arial, Helvetica, sans-serif;
}

header{
    padding-top: 50px;
    padding-right: 11%;
    padding-left: 11%;
    color:#FFAE7E;
}

#social-media {
    padding: 5px 0;
    display: block;
    left: 20px;
    top: 35%;
    background: #FFC37B;
    transform: scale(0.8);
}

#social-icon {
    padding: 5px 0;
    transform: scale(0.9);
}

.main {
    position: relative;
    left: 20%;
    bottom: 5rem; 
}

.main .h1 {
    color: #FFAE7E;
    font-size: 50px;
    font-family: 'Lobster', cursive;
}

#introduction {
    transform: scale(1.3);
    padding-left: 75px;
}

#mobile {
    margin-top: 2rem;
    position: relative;
}

.mobile-image {
    width: 255px;
    height: 516px;
    position: relative;
    top: 10px;
    left: 5px;
}

.mobile-screen {
    width: 223px;
    height: 392px;
    position: absolute;
    top: 62px;
    left: 37px;
}

#play-now-btn {
    width: 45%;
    color: #fff;
    background: linear-gradient(45deg, #302FE4, #8F3E9F, #EB4C5D);
    border-color: #6F2232;
    transition: 0.3s;
}

#play-now-btn:hover {
    background: #EB4C5D;
}

#page-tracker {
    top: 35%;
    right: 30px;
}

.dot {
    margin: 2rem;
    padding: 7px;
    height: 10px;
    width: 10px;
    background-color: #FFC37B;
    border-radius: 50%;
    display: inline-block;
}

#chat-icon {
    bottom: 20px;
    right: 20px;
}

#chat-icon img {
    width: 70px;
    height: 70px;
    border-radius: 50%;
}

.wrap{
    margin-top: 5rem;
    background-color: #FFC37B;
    color: #6F2232;
    height:auto;
}

.wrap .features{
    display:block;
    padding-top:6%;
    margin-left: 20%;
    margin-right: 20%;
    padding-bottom: 10%;
}

.footer{
    background-color: #950740;
    height:auto;
    padding-bottom: 10%;
}

.footer-content{
    padding-top:8%;
}

.lastimg img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 65%;
    height: auto;
}
.copyright {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 18;
    text-align: center;
    color: #fff;
}

@media (min-width: 400px) {
    #page-tracker {
        display: none;
    }
}

